--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -579,7 +579,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="DeviceBoardViewController" id="ev3-io-dBY" customClass="DeviceBoardViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="19i-xP-YnO">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
@@ -1011,6 +1011,7 @@
                             <outlet property="delegate" destination="ev3-io-dBY" id="ime-Gz-HQp"/>
                         </connections>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" id="VL3-ho-AsD">
                         <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" style="plain" id="6IS-g7-XS7">
@@ -1091,7 +1092,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Da9-tT-iIM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1001" y="-364"/>
+            <point key="canvasLocation" x="1017" y="-355"/>
         </scene>
         <!--Add Device Step One Controller-->
         <scene sceneID="7B4-Z8-b40">
